Remove video playback controls

--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -7,7 +7,7 @@
 
 
    <!--add header class for bg video=-->
-    <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=-zN_BUUXoic',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
+    <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=-zN_BUUXoic',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1, showControls:false, loop:true, quality:'hd720'}"></a>
   <!--insert background video-->
 
     <div class="header-content">
