--- a/themes/hugo-creative-theme/layouts/partials/about.html
+++ b/themes/hugo-creative-theme/layouts/partials/about.html
@@ -13,7 +13,7 @@
                     <p class="text-faded">{{ . | markdownify }}</p>
                 {{ end }}
                 {{ with .Site.Params.about.buttonText }}
-                    <a href="#" class="btn btn-default btn-xl">{{ . }}</a>
+                    <a href="#services" class="btn btn-default btn-xl">{{ . }}</a>
                 {{ end }}
             </div>
         </div>
