--- a/themes/hugo-creative-theme/layouts/partials/contact.html
+++ b/themes/hugo-creative-theme/layouts/partials/contact.html
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <form name="contact" netlify-honeypot="bot-field" method="POST" action="thank-you" netlify>
+        <form name="contact" class="col-lg-8 col-lg-offset-2" netlify-honeypot="bot-field" method="POST" action="thank-you" netlify>
           <p class="hidden">
             <label>Don’t fill this out if you're human: <input name="bot-field"></label>
           </p>
