--- a/themes/hugo-creative-theme/layouts/partials/head.html
+++ b/themes/hugo-creative-theme/layouts/partials/head.html
@@ -7,7 +7,8 @@
 <title>{{ .Site.Title }}</title>
 
 {{ "<!-- Favicon -->" | safeHTML }}
-<link rel="shortcut icon" href="{{ .Site.Params.favicon | absURL }}">
+<link rel="icon" type="image/png" href="{{ .Site.Params.favicon | absURL }}">
+<link rel="icon" type="image/svg+xml" href="{{ .Site.Params.faviconSVG | absURL }}">
 {{ "<!-- Bootstrap Core CSS -->" | safeHTML }}
 <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}" type="text/css">
 {{ "<!-- Custom Fonts -->" | safeHTML }}
