--- a/themes/hugo-creative-theme/layouts/partials/head.html
+++ b/themes/hugo-creative-theme/layouts/partials/head.html
@@ -5,6 +5,20 @@
 {{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
 {{ .Hugo.Generator }}
 <title>{{ .Site.Title }}</title>
+<!-- open graph -->
+<meta property="og:type" content="website" />
+<meta property="og:title" content="{{ if ne .URL "/" }}{{ .Title }} &middot; {{ end }}{{ .Site.Title }}"/>
+<meta property="og:description" content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.description }}{{ end }}"/>
+<meta property="og:site_name" content="{{ .Site.Title }}"/>
+<meta property="og:url" content="{{ .Permalink }}"/>
+<meta property="og:locale" content="en">
+{{ if .Params.og_image }}
+<meta property="og:image" content="http://www.skyclops.pictures{{ .Params.og_image | relURL }}"/>
+<meta property="og:image:secure_url" content="{{ .Params.og_image | absURL }}"/>
+{{ else }}
+<meta property="og:image" content="http://www.skyclops.pictures{{ .Site.Params.og_image | relURL }}"/>
+<meta property="og:image:secure_url" content="{{ .Site.Params.og_image | absURL }}"/>
+{{ end }}
 
 {{ "<!-- Favicon -->" | safeHTML }}
 <link rel="icon" type="image/png" href="{{ .Site.Params.favicon | absURL }}">
